--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -47,7 +47,7 @@
           </tr>
           <tr>
             <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-success" %></td>
-            <td><%= link_to "注文履歴一覧を見る", orders_path, class: "btn btn-primary" %></td>
+            <td><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary" %></td>
           </tr>
         </tbody>
       </table>
