--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,13 +1,21 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>商品一覧</h2>
-        <div class="box">
-          <%= link_to new_admin_item_path, class: "btn btn-outline-secondary btn-block" do %>
-            <i class="fa-duotone fa-plus"></i>
-          <% end %>
-        </div>
       <table class="table table-hover table-inverse">
+        <tbody>
+          <tr>
+            <td><h2>商品一覧</h2></td>
+            <td>
+              <div class="box">
+                <%= link_to new_admin_item_path, class: "btn btn-outline-secondary" do %>
+                  <i class="fa-duotone fa-plus"></i>
+                <% end %>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
         <thead>
           <tr>
             <th>商品ID</th>
