--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -46,7 +46,7 @@
             </td>
           </tr>
           <tr>
-            <td><%= f.submit "商品登録", class: "btn btn-success" %></td>
+            <td><%= f.submit "新規登録", class: "btn btn-success" %></td>
           </tr>
           <% end %>
         </tbody>
