--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -12,48 +12,48 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <% @total = 0 %>
           <% @cart_items.each do |cart_item| %>
+          <% @total = @total + cart_item.subtotal %>
+          <tr>
             <td>
-              <%= image_tag cart_item.item_image(50,50) %>
-              <%= cart.item.name %>
+              <%= image_tag cart_item.item.get_image(50,50) %>
+              <%= cart_item.item.name %>
             </td>
             <td>
-              <%= @order.add_tax_sales_price.to_s(:dalimited) %>
+              <%= cart_item.item.price.to_s(:dalimited) %>
             </td>
             <td>
               <%= cart_item.amount %>
             </td>
             <td>
-              <%= @order.total_payment %>
+              <%= cart_item.subtotal %>
             </td>
           </tr>
-        </tbody>
-      </table>
-      <%= form_with model: @order, url: order_completion, local: true do |f| %>
-        <p>支払い方法</p>
-          <%= order.payment_method %>
-        <p>お届け先</p>
-          <%= @order.address %>
-        <%= f.submit "注文を確定する" %>
-      <% end %>
-    <div class="col-md-4">
-      <table>
-        <tbody>
+          <% end %>
           <tr>
             <td>送料</td>
+            <% @order.sipping_cost = 800 %>
             <td><%= @order.sipping_cost %></td>
           </tr>
           <tr>
             <td>商品合計</td>
-            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
+            <td><%= @total.to_s(:delimited) %></td>
           </tr>
           <tr>
-            <rd>請求金額</rd>
-            <td><%= @order.to_s(:delimited) %></td>
+            <td>請求金額</td>
+            <% @order.total_payment = @total + @order.sipping_cost %>
+            <td><%= @total + @order.sipping_cost %></td>
           </tr>
         </tbody>
       </table>
+      <%= form_with model: @order, url: orders_path, local: true do |f| %>
+        <p>支払い方法</p>
+          <%= @order.payment_method %>
+        <p>お届け先</p>
+          〒<%= @order.postal_code %><%= @order.address %><%= @order.name %>
+        <%= f.submit "注文を確定する" %>
+      <% end %>
     </div>
   </div>
 </div>
