--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -22,7 +22,7 @@
               <%= order.address %><br>
               <%= order.name %>
             </td>
-            <td><%= order.cart_item %></td>
+            <td><%= order.item.name %></td>
             <td><%= order.total_payment %></td>
             <td><%= order.status %></td>
             <td><%= link_to "表示する", order_path, class: "btn-btn-sm btn-success" %></td>
