--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -30,7 +30,7 @@
           <p>請求情報</p>
           <tr>
             <td>商品合計</td>
-            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
+            <td><%= (cart.item.price*cart.amount).to_s(:delimited) %></td>
           </tr>
           <tr>
             <td>配送料</td>
