--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -21,13 +21,13 @@
               <%= cart_item.item.name %>
             </td>
             <td>
-              <%= cart_item.item.price.to_s(:dalimited) %>
+              <%= cart_item.item.price.to_s(:delimited) %>
             </td>
             <td>
               <%= cart_item.amount %>
             </td>
             <td>
-              <%= cart_item.subtotal %>
+              <%= cart_item.subtotal.to_s(:delimited) %>
             </td>
           </tr>
           <% end %>
@@ -43,16 +43,23 @@
           <tr>
             <td>請求金額</td>
             <% @order.total_payment = @total + @order.sipping_cost %>
-            <td><%= @total + @order.sipping_cost %></td>
+            <td><%= (@total + @order.sipping_cost).to_s(:delimited) %></td>
           </tr>
         </tbody>
       </table>
-      <%= form_with model: @order, url: orders_path, local: true do |f| %>
         <p>支払い方法</p>
-          <%= @order.payment_method %>
+          <%= @order.payment_method_i18n %>
         <p>お届け先</p>
           〒<%= @order.postal_code %><%= @order.address %><%= @order.name %>
-        <%= f.submit "注文を確定する" %>
+        <%= form_with model: @order, url: orders_path, local: true do |f| %>
+          <%= f.hidden_field :payment_method, :value =>@order.payment_method %>
+          <%= f.hidden_field :postal_code, :value =>@order.postal_code %>
+          <%= f.hidden_field :address, :value =>@order.address %>
+          <%= f.hidden_field :name, :value =>@order.name %>
+          <%= f.hidden_field :total_payment, :value =>@order.total_payment %>
+          <%= f.hidden_field :sipping_cost, :value =>@order.sipping_cost %>
+          <%= f.hidden_field :customer_id, :value =>current_customer.id %>
+        <%= f.submit "注文を確定する", class: "btn-btn-sm btn-success" %>
       <% end %>
     </div>
   </div>
